# pyforeca

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
notebooks/: pyforeca-stock-example.ipynb  pyforeca-toy-example-demo.ipynb
pyforeca/: base.py  entropy.py  linalg.py  optimizer.py  sfa.py  spectral.py  spectrum_types.py  utils.py  viz.py
pyforeca/datasets/: reader.py  simulations.py
pyforeca/datasets/data/: eu-stock-market-note.txt
pyforeca/tests/: base_test.py  linalg_test.py  optimizer_test.py  sfa_test.py  spectral_test.py  spectrum_types_test.py  utils_test.py
