[project]
name = "pyforeca"
version = "0.0.1"
description = "Forecastable Component Analysis (ForeCA) in Python"
authors = [
    {name = "Georg M. Goerg",email = "im@gmge.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.4)",
    "scipy (>=1.16.1,<2.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ruff (>=0.12.10,<0.13.0)",
]


[tool.poetry]
package-mode = false
packages = [{ include = "pyforeca" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pandas = "^2.3.1"
mne = "^1.10.1"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # Import sorting
    "UP",   # pyupgrade: modernize syntax
    "B",    # Bugbear: potential bugs
    "C4",   # Comprehensions: list/set/dict comprehensions
]
lint.ignore = [
    "E501", # Ignore line-length; Black/Ruff handles wrapping
]

# Auto-fixable rules (including imports)
fix = true
exclude = ["notebooks/*.ipynb"]

# Make Ruff sort imports instead of isort
[tool.ruff.lint.isort]
known-first-party = ["pyforeca"]
combine-as-imports = true
force-single-line = false
lines-between-types = 1
order-by-type = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["pyforeca/tests"]
